--- a/styles/bio.css
+++ b/styles/bio.css
@@ -202,8 +202,14 @@
 @media screen and (min-width: 768px) {
   .info__band-image {
     padding: 0 60px;
-    -webkit-clip-path: inset(30px 0);
-            clip-path: inset(30px 0);
+    -webkit-clip-path: inset(40px 0);
+            clip-path: inset(40px 0);
+  }
+}
+@media screen and (min-width: 1280px) {
+  .info__band-image {
+    -webkit-clip-path: inset(50px 0);
+            clip-path: inset(50px 0);
   }
 }
 .info__quote {
@@ -328,7 +334,6 @@
 .footer {
   background-color: #323232;
   padding: 24px;
-  position: relative;
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
@@ -341,6 +346,9 @@
     padding: 0;
   }
 }
+.footer__wrapper {
+  position: relative;
+}
 @media screen and (min-width: 1280px) {
   .footer__wrapper {
     padding: 30px 40px 40px 40px;
@@ -352,7 +360,7 @@
   color: white;
   font-size: 35px;
   font-weight: 600;
-  padding-bottom: 75px;
+  padding-bottom: 80px;
   width: auto;
 }
 @media screen and (min-width: 768px) {
@@ -369,7 +377,7 @@
   justify-content: flex-start;
   gap: 30px;
   position: absolute;
-  top: 80px;
+  top: 60px;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-container {
@@ -457,7 +465,7 @@
 }
 .footer__logo {
   position: absolute;
-  bottom: 30px;
+  bottom: 15px;
   width: 150px;
 }
 @media screen and (min-width: 768px) {
@@ -466,13 +474,15 @@
     padding-top: 4px;
     flex: 1;
     position: absolute;
-    right: 25px;
-    top: 33px;
+    right: 0px;
+    top: 0px;
     width: 120px;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__logo {
-    position: relative;
+    position: absolute;
+    right: 20px;
+    top: 30px;
   }
 }/*# sourceMappingURL=bio.css.map */
