--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -165,7 +165,10 @@
     padding: 24px;
     @include tablet {
       padding: 0 60px;
-      clip-path: inset(30px 0);
+      clip-path: inset(40px 0);
+    }
+    @include desktop {
+      clip-path: inset(50px 0);
     }
   }
   &__quote {
@@ -280,7 +283,7 @@
 .footer {
   background-color: $bandsite-black;
   padding: 24px;
-  position: relative;
+  // position: relative;
   max-width: 100%;
   @include tablet {
     padding: 30px 40px 40px 40px;
@@ -289,6 +292,7 @@
     padding: 0;
   }
   &__wrapper {
+    position: relative;
     @include tablet {
     }
     @include desktop {
@@ -302,7 +306,7 @@
     color: white;
     font-size: 35px;
     font-weight: 600;
-    padding-bottom: 75px;
+    padding-bottom: 80px;
     width: auto;
     @include tablet {
       font-size: 34px;
@@ -317,7 +321,7 @@
     justify-content: flex-start;
     gap: 30px;
     position: absolute;
-    top: 80px;
+    top: 60px;
     @include tablet {
       position: relative;
       top: 0px;
@@ -395,7 +399,7 @@
   }
   &__logo {
     position: absolute;
-    bottom: 30px;
+    bottom: 15px;
     width: 150px;
 
     @include tablet {
@@ -403,12 +407,14 @@
       padding-top: 4px;
       flex: 1;
       position: absolute;
-      right: 25px;
-      top: 33px;
+      right: 0px;
+      top: 0px;
       width: 120px;
     }
     @include desktop {
-      position: relative;
+      position: absolute;
+      right: 20px;
+      top: 30px;
     }
   }
 }
