--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -23,7 +23,7 @@
       justify-content: flex-start;
     }
     @include desktop {
-      max-width: 1280px;
+      max-width: 1100px;
       margin: auto;
     }
   }
@@ -107,7 +107,7 @@
     align-items: center;
     justify-content: flex-start;
     @include desktop {
-      max-width: 1280px;
+      max-width: 1100px;
       margin: auto;
     }
   }
@@ -133,7 +133,7 @@
     padding: 40px;
   }
   @include desktop {
-    max-width: 1280px;
+    max-width: 1100px;
     margin: auto;
   }
   &__title {
@@ -169,6 +169,7 @@
     }
     @include desktop {
       clip-path: inset(50px 0);
+      padding: 0 80px;
     }
   }
   &__quote {
@@ -183,6 +184,10 @@
       line-height: 1.5;
       color: $bandsite-black;
     }
+    @include desktop {
+      margin: -20px 80px 0 80px;
+      width: 70%;
+    }
   }
   &__quote-speaker {
     font-size: 21px;
@@ -195,6 +200,9 @@
       font-weight: 600;
       font-size: 16px;
     }
+    @include desktop {
+      margin: 16px 80px;
+    }
   }
   &__bio-title {
     margin: 32px 24px 0 24px;
@@ -204,6 +212,9 @@
       margin: 50px 60px 12px 60px;
       font-weight: 600;
       font-size: 22px;
+    }
+    @include desktop {
+      margin: 50px 80px 12px 80px;
     }
   }
 
@@ -216,6 +227,9 @@
       flex-direction: row;
       margin: 0 60px;
       gap: 28px;
+    }
+    @include desktop {
+      margin: 0 80px;
     }
   }
 
@@ -238,7 +252,7 @@
   background-color: $alabaster;
   &__container {
     @include desktop {
-      max-width: 1280px;
+      max-width: 1100px;
       margin: auto;
     }
   }
@@ -275,6 +289,12 @@
       padding: 0;
       flex: 1;
     }
+    @include desktop {
+      filter: grayscale(100%);
+      &:hover {
+        filter: grayscale(0%);
+      }
+    }
   }
 }
 
@@ -297,7 +317,7 @@
     }
     @include desktop {
       padding: 30px 40px 40px 40px;
-      max-width: 1280px;
+      max-width: 1100px;
       margin: auto;
     }
   }
