--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -80,6 +80,11 @@
       padding-bottom: 0;
       margin: 0;
     }
+    &:hover {
+      @include desktop {
+        color: rgb(153, 0, 140);
+      }
+    }
   }
   &__nav-link--active {
     font-weight: 600;
@@ -291,7 +296,9 @@
     }
     @include desktop {
       filter: grayscale(100%);
-      &:hover {
+    }
+    &:hover {
+      @include desktop {
         filter: grayscale(0%);
       }
     }
