--- a/styles/bio.css
+++ b/styles/bio.css
@@ -53,19 +53,19 @@
 }
 @media screen and (min-width: 768px) {
   .header__logo-wrapper {
-    padding-left: 40px;
-    padding-right: 70px;
+    padding-left: 2.5rem;
+    padding-right: 4.375rem;
   }
 }
 .header__logo {
-  width: 180px;
-  padding-top: 24px;
-  padding-bottom: 16px;
+  width: 11.25rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
 }
 @media screen and (min-width: 768px) {
   .header__logo {
-    width: 120px;
-    padding-top: 16px;
+    width: 7.5rem;
+    padding-top: 1rem;
   }
 }
 .header__nav-wrapper {
@@ -76,7 +76,7 @@
 @media screen and (min-width: 768px) {
   .header__nav-wrapper {
     justify-content: flex-start;
-    gap: 70px;
+    gap: 4.375rem;
   }
 }
 .header__nav-link-container {
@@ -88,7 +88,7 @@
 }
 @media screen and (min-width: 768px) {
   .header__nav-link-container {
-    padding: 30px 0;
+    padding: 1.875rem 0;
     justify-content: flex-start;
     width: auto;
   }
@@ -97,15 +97,15 @@
   border-bottom: 4px solid white;
 }
 .header__nav-link {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 400;
   text-decoration: none;
   color: #ffffff;
-  padding-bottom: 16px;
+  padding-bottom: 1rem;
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding-bottom: 0;
     margin: 0;
   }
@@ -148,15 +148,15 @@
   }
 }
 .hero__title {
-  font-size: 35px;
+  font-size: 2.1875rem;
   color: white;
   font-weight: 600;
-  margin-left: 24px;
+  margin-left: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .hero__title {
-    margin-left: 40px;
-    font-size: 60px;
+    margin-left: 2.5rem;
+    font-size: 3.75rem;
   }
 }
 
@@ -168,7 +168,7 @@
 }
 @media screen and (min-width: 768px) {
   .info {
-    padding: 40px;
+    padding: 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -178,22 +178,22 @@
   }
 }
 .info__title {
-  font-size: 34px;
+  font-size: 2.125rem;
   font-weight: 600;
-  margin-left: 24px;
-  margin-top: 30px;
+  margin-left: 1.5rem;
+  margin-top: 1.875rem;
   color: #323232;
 }
 @media screen and (min-width: 768px) {
   .info__title {
     margin: 0;
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 }
 .info__band-image-container {
   display: flex;
   justify-content: center;
-  padding: 10px 0;
+  padding: 0.625rem 0;
 }
 @media screen and (min-width: 768px) {
   .info__band-image-container {
@@ -202,32 +202,32 @@
 }
 .info__band-image {
   width: 100%;
-  padding: 24px;
+  padding: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .info__band-image {
-    padding: 0 60px;
-    -webkit-clip-path: inset(40px 0);
-            clip-path: inset(40px 0);
+    padding: 0 3.75rem;
+    -webkit-clip-path: inset(2.5rem 0);
+            clip-path: inset(2.5rem 0);
   }
 }
 @media screen and (min-width: 1280px) {
   .info__band-image {
-    -webkit-clip-path: inset(50px 0);
-            clip-path: inset(50px 0);
-    padding: 0 80px;
+    -webkit-clip-path: inset(3.125rem 0);
+            clip-path: inset(3.125rem 0);
+    padding: 0 5rem;
   }
 }
 .info__quote {
-  font-size: 21px;
+  font-size: 1.3125rem;
   font-weight: 600;
-  margin: 0 24px;
+  margin: 0 1.5rem;
   line-height: 1.7;
 }
 @media screen and (min-width: 768px) {
   .info__quote {
-    margin: 0 60px;
-    font-size: 22px;
+    margin: 0 3.75rem;
+    font-size: 1.375rem;
     font-weight: 600;
     line-height: 1.5;
     color: #323232;
@@ -235,75 +235,75 @@
 }
 @media screen and (min-width: 1280px) {
   .info__quote {
-    margin: -20px 80px 0 80px;
+    margin: -1.25rem 5rem 0 5rem;
     width: 70%;
   }
 }
 .info__quote-speaker {
-  font-size: 21px;
-  margin-bottom: 32px;
+  font-size: 1.3125rem;
+  margin-bottom: 2rem;
   font-weight: 600;
-  margin: 12px 24px;
+  margin: 0.75rem 1.5rem;
   line-height: 1.7;
 }
 @media screen and (min-width: 768px) {
   .info__quote-speaker {
-    margin: 12px 60px;
+    margin: 0.75rem 3.75rem;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .info__quote-speaker {
-    margin: 16px 80px;
+    margin: 1rem 5rem;
   }
 }
 .info__bio-title {
-  margin: 32px 24px 0 24px;
-  font-size: 20px;
+  margin: 2rem 1.5rem 0 1.5rem;
+  font-size: 1.25rem;
   font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .info__bio-title {
-    margin: 50px 60px 12px 60px;
+    margin: 3.125rem 3.75rem 0.75rem 3.75rem;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 1.375rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .info__bio-title {
-    margin: 50px 80px 12px 80px;
+    margin: 3.125rem 5rem 0.75rem 5rem;
   }
 }
 .info__bio-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 24px;
+  margin: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .info__bio-container {
     flex-direction: row;
-    margin: 0 60px;
-    gap: 28px;
+    margin: 0 3.75rem;
+    gap: 1.75rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .info__bio-container {
-    margin: 0 80px;
+    margin: 0 5rem;
   }
 }
 .info__bio {
   width: 100%;
-  margin: 10px 0;
+  margin: 0.625rem 0;
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 @media screen and (min-width: 768px) {
   .info__bio {
     line-height: 1.8;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 
@@ -318,30 +318,30 @@
   }
 }
 .photos__title {
-  padding: 24px;
-  font-size: 35px;
+  padding: 1.5rem;
+  font-size: 2.1875rem;
   font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .photos__title {
-    padding: 40px 40px 0 40px;
-    font-size: 40px;
+    padding: 2.5rem 2.5rem 0 2.5rem;
+    font-size: 2.5rem;
     color: #323232;
   }
 }
 .photos__images-container {
   display: flex;
   flex-direction: column;
-  padding: 24px;
-  gap: 24px;
+  padding: 1.5rem;
+  gap: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .photos__images-container {
     flex-direction: row;
     flex-wrap: wrap;
     margin: auto;
-    padding: 30px 40px 52px 40px;
-    gap: 25px;
+    padding: 1.875rem 2.5rem 3.25rem 2.5rem;
+    gap: 1.5625rem;
     justify-content: space-between;
   }
 }
@@ -370,12 +370,12 @@
 /*-------------------Footer--------------------*/
 .footer {
   background-color: #323232;
-  padding: 24px;
+  padding: 1.5rem;
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
   .footer {
-    padding: 30px 40px 40px 40px;
+    padding: 1.875rem 2.5rem 2.5rem 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -388,33 +388,33 @@
 }
 @media screen and (min-width: 1280px) {
   .footer__wrapper {
-    padding: 30px 40px 40px 40px;
+    padding: 1.875rem 2.5rem 2.5rem 2.5rem;
     max-width: 1100px;
     margin: auto;
   }
 }
 .footer__title {
   color: white;
-  font-size: 35px;
+  font-size: 2.1875rem;
   font-weight: 600;
-  padding-bottom: 80px;
+  padding-bottom: 5rem;
   width: auto;
 }
 @media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 34px;
-    padding-bottom: 24px;
+    font-size: 2.125rem;
+    padding-bottom: 1.5rem;
   }
 }
 .footer__socials-container {
   flex: 1;
   width: 100%;
-  padding-top: 5px;
+  padding-top: 0.3125rem;
   display: flex;
   justify-content: flex-start;
-  gap: 30px;
+  gap: 1.875rem;
   position: absolute;
-  top: 60px;
+  top: 3.75rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-container {
@@ -423,11 +423,11 @@
   }
 }
 .footer__socials-icon {
-  height: 35px;
+  height: 2.1875rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-icon {
-    height: 25px;
+    height: 1.5625rem;
   }
 }
 .footer__card-container {
@@ -438,57 +438,57 @@
   .footer__card-container {
     flex-direction: row;
     justify-content: flex-start;
-    gap: 40px;
-    margin-top: 30px;
+    gap: 2.5rem;
+    margin-top: 1.875rem;
   }
 }
 .footer__name {
-  padding-top: 8px;
+  padding-top: 0.5rem;
 }
 .footer__name-text {
   color: white;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__name-text {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 .footer__location {
-  padding: 24px 0;
+  padding: 1.5rem 0;
   color: white;
 }
 .footer__location-text {
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__location-text {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 .footer__email {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 .footer__email-text {
   text-decoration: none;
   color: white;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 @media screen and (min-width: 768px) {
   .footer__email-text {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 .footer__copyright {
   color: white;
   font-weight: 400;
-  font-size: 14px;
-  margin-top: 70px;
+  font-size: 0.875rem;
+  padding-top: 4.375rem;
 }
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    padding: 16px 0;
+    padding: 1rem 0;
     margin: 0;
   }
 }
@@ -502,24 +502,24 @@
 }
 .footer__logo {
   position: absolute;
-  bottom: 15px;
-  width: 150px;
+  top: 22.5rem;
+  width: 9.375rem;
 }
 @media screen and (min-width: 768px) {
   .footer__logo {
     margin-left: auto;
-    padding-top: 4px;
+    padding-top: 0.25rem;
     flex: 1;
     position: absolute;
     right: 0px;
     top: 0px;
-    width: 120px;
+    width: 7.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__logo {
     position: absolute;
-    right: 20px;
-    top: 30px;
+    right: 1.25rem;
+    top: 1.875rem;
   }
 }/*# sourceMappingURL=bio.css.map */
