--- a/styles/bio.css
+++ b/styles/bio.css
@@ -85,6 +85,10 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  border-bottom: 3px solid transparent;
+}
+.header__nav-link-container:hover {
+  border-bottom: 3px solid white;
 }
 @media screen and (min-width: 768px) {
   .header__nav-link-container {
@@ -94,7 +98,7 @@
   }
 }
 .header__nav-link-container--active {
-  border-bottom: 4px solid white;
+  border-bottom: 3px solid white;
 }
 .header__nav-link {
   font-size: 1.125rem;
@@ -108,11 +112,6 @@
     font-size: 0.875rem;
     padding-bottom: 0;
     margin: 0;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .header__nav-link:hover {
-    color: rgb(153, 0, 140);
   }
 }
 .header__nav-link--active {
