--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -59,6 +59,10 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    border-bottom: 3px solid transparent;
+    &:hover {
+      border-bottom: 3px solid white;
+    }
 
     @include tablet {
       padding: 1.875rem 0;
@@ -67,7 +71,7 @@
     }
   }
   &__nav-link-container--active {
-    border-bottom: 4px solid white;
+    border-bottom: 3px solid white;
   }
   &__nav-link {
     font-size: 1.125rem;
@@ -79,11 +83,6 @@
       font-size: 0.875rem;
       padding-bottom: 0;
       margin: 0;
-    }
-    &:hover {
-      @include desktop {
-        color: rgb(153, 0, 140);
-      }
     }
   }
   &__nav-link--active {
