--- a/styles/bio.css
+++ b/styles/bio.css
@@ -315,7 +315,7 @@
   font-size: 2.1875rem;
   color: white;
   font-weight: 600;
-  margin-left: 1.5rem;
+  margin-left: 16px;
 }
 @media screen and (min-width: 768px) {
   .hero__title {
@@ -344,7 +344,7 @@
 .info__title {
   font-size: 24px;
   font-weight: 600;
-  margin-left: 1.5rem;
+  margin-left: 16px;
   margin-top: 1.875rem;
   color: #323232;
 }
@@ -366,7 +366,7 @@
 }
 .info__band-image {
   width: 100%;
-  padding: 1.5rem;
+  padding: 16px;
 }
 @media screen and (min-width: 768px) {
   .info__band-image {
@@ -385,7 +385,7 @@
 .info__quote {
   font-size: 1.3125rem;
   font-weight: 600;
-  margin: 0 1.5rem;
+  margin: 0 16px;
   line-height: 1.7;
 }
 @media screen and (min-width: 768px) {
@@ -407,7 +407,7 @@
   font-size: 1.3125rem;
   margin-bottom: 2rem;
   font-weight: 600;
-  margin: 0.75rem 1.5rem;
+  margin: 0.75rem 16px;
   line-height: 1.7;
 }
 @media screen and (min-width: 768px) {
@@ -423,7 +423,7 @@
   }
 }
 .info__bio-title {
-  margin: 2rem 1.5rem 0 1.5rem;
+  margin: 2rem 16px 0 16px;
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -443,7 +443,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 1.5rem;
+  margin: 1.5rem 16px;
 }
 @media screen and (min-width: 768px) {
   .info__bio-container {
@@ -482,7 +482,7 @@
   }
 }
 .photos__title {
-  padding: 1.5rem;
+  padding: 16px;
   font-size: 1.5rem;
   font-weight: 600;
 }
@@ -496,8 +496,8 @@
 .photos__images-container {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
-  gap: 1.5rem;
+  padding: 16px;
+  gap: 16px;
 }
 @media screen and (min-width: 768px) {
   .photos__images-container {
@@ -531,33 +531,225 @@
   }
 }
 
+.comments {
+  max-width: 100%;
+}
 .comments__wrapper {
-  padding: 24px;
+  padding: 16px;
+}
+@media screen and (min-width: 768px) {
+  .comments__wrapper {
+    padding: 40px;
+  }
 }
 .comments__title {
   font-size: 24px;
   font-weight: 600;
 }
+@media screen and (min-width: 768px) {
+  .comments__title {
+    font-size: 40px;
+  }
+}
 .comments__form-container {
   display: flex;
   justify-content: flex-end;
+  gap: 16px;
+  margin-top: 24px;
+  border-bottom: 1px solid #e1e1e1;
+}
+@media screen and (min-width: 768px) {
+  .comments__form-container {
+    width: 80%;
+    margin: auto;
+  }
 }
 .comments__form {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
-.comments__name-input, .comments__comment-input {
+.comments__form-label {
+  font-size: 10px;
+  text-transform: uppercase;
+  color: #e1e1e1;
+  margin-bottom: 4px;
+  margin-top: 10px;
+}
+.comments__name-input {
   padding: 12px;
-  border: 1px solid #e1e1e1;
+  border: none;
+  outline: 1px solid #e1e1e1;
   margin-bottom: 10px;
   border-radius: 4px;
+  background-color: #fafafa;
 }
-.comments__name-input:focus, .comments__comment-input:focus {
-  border: 1px solid #323232;
+.comments__name-input::-moz-placeholder {
+  color: black;
+}
+.comments__name-input:-ms-input-placeholder {
+  color: black;
+}
+.comments__name-input::placeholder {
+  color: black;
+}
+.comments__name-input:focus {
+  outline: 1px solid #323232;
+}
+.comments__name-input--error {
+  outline: 1px solid #d22d2d;
+}
+.comments__name-input--error::-moz-placeholder {
+  color: #d22d2d;
+}
+.comments__name-input--error:-ms-input-placeholder {
+  color: #d22d2d;
+}
+.comments__name-input--error::placeholder {
+  color: #d22d2d;
+}
+.comments__comment-input {
+  height: 100px;
+  padding: 12px;
+  border: none;
+  outline: 1px solid #e1e1e1;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  background-color: #fafafa;
+  resize: none;
+}
+.comments__comment-input::-moz-placeholder {
+  color: black;
+  vertical-align: top;
+}
+.comments__comment-input:-ms-input-placeholder {
+  color: black;
+  vertical-align: top;
+}
+.comments__comment-input::placeholder {
+  color: black;
+  vertical-align: top;
+}
+.comments__comment-input--error {
+  outline: 1px solid #d22d2d;
+}
+.comments__comment-input--error::-moz-placeholder {
+  color: #d22d2d;
+}
+.comments__comment-input--error:-ms-input-placeholder {
+  color: #d22d2d;
+}
+.comments__comment-input--error::placeholder {
+  color: #d22d2d;
+}
+.comments__comment-input:focus {
+  outline: 1px solid #323232;
+}
+@media screen and (min-width: 768px) {
+  .comments__comment-input {
+    margin-bottom: 0;
+  }
+}
+.comments__avatar-container {
+  padding-top: 25px;
 }
 .comments__avatar {
-  width: 36px;
-  height: 36px;
   border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  -webkit-clip-path: circle(43%);
+          clip-path: circle(43%);
+}
+@media screen and (min-width: 768px) {
+  .comments__avatar {
+    width: 52px;
+    height: 52px;
+  }
+}
+.comments__submit-button {
+  background-color: #323232;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  font-size: 15px;
+}
+.comments__submit-button:hover {
+  background-color: black;
+}
+@media screen and (min-width: 768px) {
+  .comments__submit-button {
+    width: 150px;
+    margin: 20px 0;
+    margin-left: auto;
+  }
+}
+.comments__list {
+  padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 768px) {
+  .comments__list {
+    width: 80%;
+    margin: auto;
+  }
+}
+.comments__comment-list-item {
+  display: flex;
+  gap: 16px;
+  padding: 10px 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+@media screen and (min-width: 768px) {
+  .comments__comment-list-item {
+    padding: 20px 0;
+  }
+}
+.comments__comment-left-div {
+  display: flex;
+  align-items: center;
+}
+.comments__commenter-image {
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  -webkit-clip-path: circle(43%);
+          clip-path: circle(43%);
+}
+@media screen and (min-width: 768px) {
+  .comments__commenter-image {
+    width: 52px;
+    height: 52px;
+  }
+}
+.comments__commenter-image--undefined {
+  background-color: #e1e1e1;
+}
+.comments__comment-right-div {
+  flex: 1;
+  overflow: hidden;
+}
+.comments__comment-upper-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.comments__commenter-name-text {
+  font-weight: 600;
+  font-size: 15px;
+}
+.comments__comment-date {
+  color: #e1e1e1;
+  font-size: 15px;
+}
+.comments__comment-lower-div {
+  padding-top: 5px;
+}
+.comments__comment-text {
+  font-size: 14px;
+  word-wrap: break-word;
 }/*# sourceMappingURL=bio.css.map */
