--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -36,7 +36,7 @@
     font-size: 2.1875rem;
     color: white;
     font-weight: 600;
-    margin-left: 1.5rem;
+    margin-left: 16px;
     @include tablet {
       margin-left: 2.5rem;
       font-size: 3.75rem;
@@ -60,7 +60,7 @@
   &__title {
     font-size: 24px;
     font-weight: 600;
-    margin-left: 1.5rem;
+    margin-left: 16px;
     margin-top: 1.875rem;
     color: $bandsite-black;
 
@@ -79,7 +79,7 @@
   }
   &__band-image {
     width: 100%;
-    padding: 1.5rem;
+    padding: 16px;
     @include tablet {
       padding: 0 3.75rem;
       clip-path: inset(2.5rem 0);
@@ -92,7 +92,7 @@
   &__quote {
     font-size: 1.3125rem;
     font-weight: 600;
-    margin: 0 1.5rem;
+    margin: 0 16px;
     line-height: 1.7;
     @include tablet {
       margin: 0 3.75rem;
@@ -110,7 +110,7 @@
     font-size: 1.3125rem;
     margin-bottom: 2rem;
     font-weight: 600;
-    margin: 0.75rem 1.5rem;
+    margin: 0.75rem 16px;
     line-height: 1.7;
     @include tablet {
       margin: 0.75rem 3.75rem;
@@ -122,7 +122,7 @@
     }
   }
   &__bio-title {
-    margin: 2rem 1.5rem 0 1.5rem;
+    margin: 2rem 16px 0 16px;
     font-size: 1.25rem;
     font-weight: 600;
     @include tablet {
@@ -139,7 +139,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 1.5rem;
+    margin: 1.5rem 16px;
     @include tablet {
       flex-direction: row;
       margin: 0 3.75rem;
@@ -175,7 +175,7 @@
   }
 
   &__title {
-    padding: 1.5rem;
+    padding: 16px;
     font-size: 1.5rem;
     font-weight: 600;
     @include tablet {
@@ -187,8 +187,8 @@
   &__images-container {
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
-    gap: 1.5rem;
+    padding: 16px;
+    gap: 16px;
     @include tablet {
       flex-direction: row;
       flex-wrap: wrap;
@@ -220,16 +220,30 @@
 //---------------------------------------Comments-------------------------------//
 
 .comments {
+  max-width: 100%;
   &__wrapper {
-    padding: 24px;
+    padding: 16px;
+    @include tablet {
+      padding: 40px;
+    }
   }
   &__title {
     font-size: 24px;
     font-weight: 600;
+    @include tablet {
+      font-size: 40px;
+    }
   }
   &__form-container {
     display: flex;
     justify-content: flex-end;
+    gap: 16px;
+    margin-top: 24px;
+    border-bottom: 1px solid $mercury;
+    @include tablet {
+      width: 80%;
+      margin: auto;
+    }
   }
 
   &__form {
@@ -237,20 +251,154 @@
     flex-direction: column;
     flex: 1;
   }
-  &__name-input,
-  &__comment-input {
+  &__form-label {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: $mercury;
+    margin-bottom: 4px;
+    margin-top: 10px;
+  }
+  &__name-input {
     padding: 12px;
-    border: 1px solid $mercury;
+    border: none;
+    outline: 1px solid $mercury;
     margin-bottom: 10px;
     border-radius: 4px;
+    background-color: $alabaster;
+    &::placeholder {
+      color: black;
+    }
     &:focus {
-      border: 1px solid $bandsite-black;
+      outline: 1px solid $bandsite-black;
+    }
+    &--error {
+      outline: 1px solid #d22d2d;
+      &::placeholder {
+        color: #d22d2d;
+      }
+    }
+  }
+  &__comment-input {
+    height: 100px;
+    padding: 12px;
+    border: none;
+    outline: 1px solid $mercury;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    background-color: $alabaster;
+    resize: none;
+
+    &::placeholder {
+      color: black;
+      vertical-align: top;
+    }
+    &--error {
+      outline: 1px solid #d22d2d;
+      &::placeholder {
+        color: #d22d2d;
+      }
+    }
+    &:focus {
+      outline: 1px solid $bandsite-black;
+    }
+    @include tablet {
+      margin-bottom: 0;
+    }
+  }
+  &__avatar-container {
+    padding-top: 25px;
+  }
+  &__avatar {
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    clip-path: circle(43%);
+    @include tablet {
+      width: 52px;
+      height: 52px;
+    }
+  }
+  &__submit-button {
+    background-color: $bandsite-black;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    height: 40px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    font-size: 15px;
+    &:hover {
+      background-color: black;
+    }
+    @include tablet {
+      width: 150px;
+      margin: 20px 0;
+      margin-left: auto;
     }
   }
 
-  &__avatar {
-    width: 36px;
-    height: 36px;
+  //------------------Comments List Section-------------------//
+
+  &__list {
+    padding: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    @include tablet {
+      width: 80%;
+      margin: auto;
+    }
+  }
+  &__comment-list-item {
+    display: flex;
+    gap: 16px;
+    padding: 10px 0;
+    border-bottom: 1px solid $mercury;
+    @include tablet {
+      padding: 20px 0;
+    }
+  }
+  &__comment-left-div {
+    display: flex;
+    align-items: center;
+  }
+  &__commenter-image {
     border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    clip-path: circle(43%);
+    @include tablet {
+      width: 52px;
+      height: 52px;
+    }
+  }
+  &__commenter-image--undefined {
+    background-color: $mercury;
+  }
+  &__comment-right-div {
+    flex: 1;
+    overflow: hidden;
+  }
+
+  &__comment-upper-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__commenter-name-text {
+    font-weight: 600;
+    font-size: 15px;
+  }
+  &__comment-date {
+    color: $mercury;
+    font-size: 15px;
+  }
+
+  &__comment-lower-div {
+    padding-top: 5px;
+  }
+  &__comment-text {
+    font-size: 14px;
+    word-wrap: break-word;
   }
 }
