--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -226,12 +226,18 @@
     @include tablet {
       padding: 40px;
     }
+    @include desktop {
+      max-width: 1100px;
+      margin: auto;
+    }
   }
   &__title {
     font-size: 24px;
     font-weight: 600;
+
     @include tablet {
       font-size: 40px;
+      margin-bottom: 20px;
     }
   }
   &__form-container {
@@ -241,7 +247,7 @@
     margin-top: 24px;
     border-bottom: 1px solid $mercury;
     @include tablet {
-      width: 80%;
+      max-width: 700px;
       margin: auto;
     }
   }
@@ -254,9 +260,12 @@
   &__form-label {
     font-size: 10px;
     text-transform: uppercase;
-    color: $mercury;
+    color: $silver;
     margin-bottom: 4px;
     margin-top: 10px;
+    @include tablet {
+      font-size: 12px;
+    }
   }
   &__name-input {
     padding: 12px;
@@ -345,7 +354,7 @@
     display: flex;
     flex-direction: column-reverse;
     @include tablet {
-      width: 80%;
+      max-width: 700px;
       margin: auto;
     }
   }
@@ -390,7 +399,7 @@
     font-size: 15px;
   }
   &__comment-date {
-    color: $mercury;
+    color: $silver;
     font-size: 15px;
   }
 
